alignment fix

--- a/app/assets/stylesheets/_user.scss
+++ b/app/assets/stylesheets/_user.scss
@@ -112,6 +112,9 @@ $logo-green: #39b54a;
 
 }
 
+.connection.row.connection {
+  width: 100%;
+}
 
 .tag-container{
 
